redux with typescript

--- a/tasks/src/1.Sandglass/1.Sandglass.md
+++ b/tasks/src/1.Sandglass/1.Sandglass.md
@@ -1,4 +1,4 @@
-Отрефактори приложение в `index.js` так, чтобы оно использовало Redux, а затем расширь его функционал.
+Отрефактори приложение в `index.tsx` так, чтобы оно использовало Redux, а затем расширь его функционал.
 
 1. Переизобретать Redux не нужно.
 Просто создай `appStore` с помощью `createStore` из Redux и используй импортированный `timerReducer`.
