--- a/tasks/src/2.Sushi/2.2.Menu.md
+++ b/tasks/src/2.Sushi/2.2.Menu.md
@@ -1,9 +1,9 @@
 В этом задании нужно сделать так, чтобы список продуктов брался из store.
 
-Сейчас `Menu` показывает только пару продуктов. А вот в `preloadedState` в `app/store.js` есть коллекция всех продуктов.
+Сейчас `Menu` показывает только пару продуктов. А вот в `preloadedState` в `app/store.ts` есть коллекция всех продуктов.
 Выполни следующие шаги, чтобы в меню отображались все продукты.
 
-1. Извлеки данные о продукте из `store` в компоненте `Product` используя хук `useSelector`. Компонент `Product` должен:
+1. Извлеки данные о продукте из `store` в компоненте `Product` используя хук `useAppSelector`. Компонент `Product` должен:
     - Принимать идентификатор продукта `productId` через props
     - Находить product в коллекции `products` из state (из store) по идентификатору
     Пока не требуется передавать в компонент `Product` свойства `purchase`, `onDecrease`, `onIncrease`, `onPay`.
