--- a/tasks/src/2.Sushi/2.3.Refactoring.md
+++ b/tasks/src/2.Sushi/2.3.Refactoring.md
@@ -1,9 +1,12 @@
 В этом задании нужно разбить `rootReducer` на слайсы `navigationSlice`, `productsSlice`.
 
-1. Добавь файл `navigationSlice.js` в директории `features/navigation`. 
+1. Добавь файл `navigationSlice.ts` в директории `features/navigation`.
 
     Для создания слайса `navigationSlice` воспользуемся функцией `createSlice`.
-    ```js
+    ```typescript
+    import {Page} from '../../constants/Page';
+    import {createSlice} from '@reduxjs/toolkit';
+
     const navigationSlice = createSlice({
       name: 'page',
       initialState: Page.menu,
@@ -13,7 +16,7 @@
         }
       }
     });
-   
+
     // За генерацию 'action creator' 'navigateTo' теперь отвечает 'createSlice'
     export const { navigateTo } = navigationSlice.actions;
 
@@ -21,32 +24,33 @@
     export const pageReducer = navigationSlice.reducer;
     ```
 
-    Не забудь поправить импорт для `navigateTo` в `Navigation.js`.
+    Не забудь поправить импорт для `navigateTo` в `Navigation.tsx`.
 
-    Обрати внимание, что каждый слайс несет ответственность только за свою часть полного состояния 
+    Обрати внимание, что каждый слайс несет ответственность только за свою часть полного состояния
     и только эта часть инициализируется в слайсе по умолчанию: `initialState: Page.menu`.
 
-2. Создай файл `productsSlice.js` в директории `features/products`. Перенеси в него код для слайса продуктов по примеру `navigationSlice.js`.
-    ```js
+2. Создай файл `productsSlice.ts` в директории `features/products`.
+Перенеси в него код для слайса продуктов по примеру `navigationSlice.ts`.
+    ```typescript
     const productsSlice = createSlice({
       // ...
     });
-    
+
     export const productsReducer = productsSlice.reducer;
     ```
 
 3. Каждый слайс отвечает за часть состояния приложения. Теперь нужно собрать части состояния вместе.
-В Redux Toolkit добавлена функция создания `store` `configureStore`, которая принимает в качестве 
+В Redux Toolkit добавлена функция создания `store` `configureStore`, которая принимает в качестве
 параметра объект `reducer`, поля которого — слайсы состояния нашего приложения.
 Воспользуемся функцией `configureStore` из `@reduxjs/toolkit` вместо `createStore`.
-    
+
     Добавь импорт `configureStore`:
-    ```js
+    ```typescript
     import {configureStore} from '@reduxjs/toolkit';
     ```
 
     Перепиши код создания `store` с помощью `configureStore`:
-    ```js
+    ```typescript
     export const store = configureStore({
       reducer: {
         page: pageReducer,
@@ -56,7 +60,7 @@
     });
     ```
 
-4. Код `rootReducer` нам больше не нужен. Теперь можно удалить файл `features/indes.js` и все его импорты.
+4. Код `rootReducer` нам больше не нужен. Теперь можно удалить файл `features/indes.ts` и все его импорты.
 
 5. Теперь код редьюсеров разбит по файлам. Каждый файл отвечает за свою часть состояния.
 Не нужно больше писать типы и функции создания действий.
