--- a/tasks/src/2.Sushi/2.4.Logging.md
+++ b/tasks/src/2.Sushi/2.4.Logging.md
@@ -3,13 +3,15 @@
 1. Получить информацию о всех действиях можно с помощью middleware.
 
     Создай заглушку middleware:
-    ```js
-    const customMiddleWare = ({ getState, dispatch }) => next => action => {
+    ```typescript
+    import {Middleware} from 'redux';
+
+    const customMiddleWare: Middleware = ({ getState, dispatch }) => next => action => {
       return next(action);
     };
     ```
     И подключи ее к store:
-    ```js
+    ```typescript
     const store = configureStore({
       reducer: {
         page: pageReducer,
@@ -26,18 +28,20 @@
 
 3. Сделай так, чтобы при попытке перехода со страницы «Меню» на любую страницу, кроме страницы «Корзина»,
 все же происходил переход на страницу «Корзина».
-    
-    Во-первых, придется отфильтровать все действия по типу, а значит надо импортировать действие `navigateTo` 
+
+    Во-первых, придется отфильтровать все действия по типу, а значит надо импортировать действие `navigateTo`
         из `/features/navigation/navigationSlice`, чтобы прочитать поле `type`.
     Во-вторых, придется использовать `getState()`, чтобы узнать текущую страницу.
     В-третьих, вместо вызова `next(action)` в описанных случаях надо передавать в `next` новое действие,
         которое приведет к переходу на нужную страницу.
 
 4. Middleware для качественного логирования всех действий уже написан. Добавь его к `store`.
-    
-    Сначала импортируй:
-    ```js
-    import logger from 'redux-logger';
+
+    Сначала импортируй `createLogger` и создай экземпляр `logger`:
+    ```typescript
+    import createLogger from 'redux-logger';
+
+    const logger: Middleware = createLogger();
     ```
     Затем передай в `configureStore` поле `middleware: [customMiddleWare, logger]`
     Посмотри, что выводится консоль при выполнении различных действий.
