--- a/tasks/src/2.Sushi/2.5.Api.md
+++ b/tasks/src/2.Sushi/2.5.Api.md
@@ -1,29 +1,47 @@
 В этом задании нужно сделать так, чтобы список продуктов меню подгружался через api.
 
-1. Добавь case-редьюсеры `loadProductsRequest` и `loadProductsSuccess` в `features/products/productsSlice.js`.
+1. Добавь case-редьюсеры `loadProductsRequest` и `loadProductsSuccess` в `features/products/productsSlice.ts`.
 Не забудь добавить экспорт создателей действий из `productsSlice.actions`.
 
-    ```js
+    ```typescript
+    export interface IProductsState {
+      allIds: number[];
+      byId: Record<string, IProduct>;
+      status: Status;
+    }
+
+    const initialState: IProductsState = {
+      allIds: [],
+      byId: {},
+      status: Status.none,
+    };
+
     export const productsSlice = createSlice({
       name: 'products',
-      initialState: {
-        allIds: [],
-        byId: {},
-        status: Status.none
-      },
+      initialState,
       reducers: {
         loadProductsRequest(state) {
-          // ...
+          return {
+            ...state,
+            status: Status.loading,
+          };
         },
-        loadProductsSuccess(state, action) {
-          // ...
-        }
-      }
+        loadProductsSuccess(state, action: PayloadAction<IProduct[]>) {
+          const products = action.payload;
+          const productsAllIds = products.map((p) => p.id);
+          const productsById = products.reduce((result, product) => ({...result, [product.id]: product}), {});
+
+          return {
+            ...state,
+            allIds: productsAllIds,
+            byId: productsById,
+            status: Status.loaded,
+          };
+        },
+      },
     });
-    
-    // экспортируем action creators
-    export const { loadProductsRequest, loadProductsSuccess } = productsSlice.actions;
-    
+
+    export const {loadProductsRequest, loadProductsSuccess} = productsSlice.actions;
     export const productsReducer = productsSlice.reducer;
     ```
 
@@ -36,7 +54,7 @@
     а после успешного выполнения импортировать и вызвать action `loadProductsSuccess()` и также передать его в `dispatch`.
     `dispatch` в данном случае возьми напрямую из `store`.
 
-    ```js
+    ```typescript
     import {api, store} from './app/store';
 
     export const App = () => {
@@ -46,18 +64,18 @@
           // Действие после запроса
         });
       });
-    
+
       //...
     };
     ```
 
     Проверь с помощью `redux-logger`, что события начала и окончания загрузки происходят.
 
-4. Чтобы продукты снова стали отображаться осталось добавить обработку действий в `productsSlice.js`.
+4. Чтобы продукты снова стали отображаться осталось добавить обработку действий в `productsSlice.ts`.
 Обновлять состояние необходимо в immutable-стиле, как показано в примере ниже.
 
     Код обработки `loadProductsRequest` с обновлением `state` в immutable-стиле:
-    ```js
+    ```typescript
     function loadProductsRequest(state, action) {
       return {
         ...state,
@@ -66,9 +84,9 @@
     }
     ```
 
-    *Подсказка:* Код для преобразования массива продуктов в `allIds` и `byId` можно найти в `index.js`.
+    *Подсказка:* Код для преобразования массива продуктов в `allIds` и `byId` можно найти в `app/store.ts`.
     Когда закончишь, на странице меню снова должны появляться все блюда, но с задержкой.
-    `preloadedState` больше не нужен. Удали его из `store.js`.
+    `preloadedState` больше не нужен. Удали его из `app/store.ts`.
 
 5. В компоненте `Menu` допиши передачу пропса `productsStatus` в компонент.
 Пусть значение берется из `products.status` из `state`.
