--- a/tasks/src/2.Sushi/2.6.TangledFilter.md
+++ b/tasks/src/2.Sushi/2.6.TangledFilter.md
@@ -1,30 +1,36 @@
 В этом задании нужно настроить компонент для фильтрации меню. В следующем задании подключим его к API.
 
 1. Прежде всего у нас появится новый слайс `chosenProductsSlice` в состоянии приложения.
-    
+
     Вот его начальные значения:
-    ```js
-    const initialState = {
+    ```typescript
+    interface IChosenProductsState {
+      tags: number[];
+      ids: number[];
+      status: Status;
+    }
+
+    const initialState: IChosenProductsState = {
       tags: [],
       ids: [],
-      status: Status.none
-    }
+      status: Status.none,
+    };
     ```
 
     В заполненном виде он может выглядеть так:
-    ```js
-    const sliceState = {
+    ```typescript
+     const initialState: IChosenProductsState = {
       tags: [ProductTag.hot, ProductTag.veg],
       ids: [1, 5],
       status: Status.loaded
     }
     ```
-    Создай файл для слайса `chosenProductsSlice` в `features/chosenProducts/chosenProductsSlice.js`,
+    Создай файл для слайса `chosenProductsSlice` в `features/chosenProducts/chosenProductsSlice.ts`,
     пропиши в нем корректное начальное состояние и подключи его в `configureStore`.
     Пока он не должен обрабатывать никакие действия.
 
 2. Добавь case редьюсер `changeProductTag` в `chosenProductsSlice`, пока без реализации:
-    ```js
+    ```typescript
     const chosenProductsSlice = createSlice({
       name: 'chosenProducts',
       initialState,
@@ -37,15 +43,15 @@
     });
     ```
 
-3. В компоненте `MenuFilter` с помощью `useSelector` извлеки значение `chosenTags` из `state.chosenProducts.tags`.
+3. В компоненте `MenuFilter` с помощью `useAppSelector` извлеки значение `chosenTags` из `state.chosenProducts.tags`.
 Сделай так, чтобы на `onChange` диспатчился action `changeProductTag()`. За пример можешь взять компонент `Navigation`.
 
 4. Напиши реализацию case редьюсера `changeProductTag` из `chosenProductsSlice`
-    ```js
-    changeProductTag(state, {payload}) {
-      // если в массиве tags нет значения из productTag, то его надо добавить
-      // если в массиве tags есть значение из productTag, то его надо убрать
-    }
+    ```typescript
+		changeProductTag(state, {payload}: PayloadAction<number>) {
+			// если в массиве tags нет значения из productTag, то его надо добавить
+			// если в массиве tags есть значение из productTag, то его надо убрать
+		}
     ```
 
     Помни, что благодаря использованию библиотеки Immer, изменения можно писать в мутирующее стиле.
