--- a/tasks/src/2.Sushi/2.7.UnstableFilter.md
+++ b/tasks/src/2.Sushi/2.7.UnstableFilter.md
@@ -2,91 +2,88 @@
 Для этого маленького приложения это избыточно: меню можно было отфильтровать прямо в браузере, но через API интереснее.
 
 После предыдущего задания в `state` появился слайс `chosenProductsSlice` примерно такой структуры:
-    ```js
-    const state = {
-      /* ... */
-      chosenProducts = {
-        tags: [ProductTag.hot, ProductTag.veg],
-        ids: [1, 5],
-        status: Status.loaded
-      }
-      /* ... */
+  ```typescript
+  const state = {
+    /* ... */
+    chosenProducts = {
+      tags: [ProductTag.hot, ProductTag.veg],
+      ids: [1, 5],
+      status: Status.loaded
     }
-    ```
+    /* ... */
+  }
+  ```
 
 1. Сейчас меню всегда показывает полный список продуктов. Надо сделать так,
 чтобы после успешной загрузки отфильтрованного списка продуктов, отображался он.
 Для начала нужно изменить код так, чтобы компонент `Menu` умел получать данные из слайса `chosenProductsSlice`.
 
-    Добавьте функции-селекторы `getProductStatus` и `getProductIds` в `features/products/productsSlice.js`:
-    ```js
-    export function getProductStatus(state) {
+    Добавьте функции-селекторы `getProductStatus` и `getProductIds` в `features/products/productsSlice.ts`:
+    ```typescript
+    export function getProductStatus(state: RootState) {
       const {products, chosenProducts} = state;
-    
-      if (
-        chosenProducts.status === Status.loading ||
-        products.status === Status.loading
-      ) {
+
+      if (chosenProducts.status === Status.loading || products.status === Status.loading) {
         return Status.loading;
       }
-    
+
       if (products.status === Status.loaded) {
         return Status.loaded;
       }
-    
+
       return Status.none;
     }
-    
-    export function getProductIds(state) {
+
+    export function getProductIds(state: RootState) {
       const {products, chosenProducts} = state;
-    
+
       if (chosenProducts.status === Status.loaded) {
         return chosenProducts.ids;
       }
-    
+
       if (products.status === Status.loaded) {
         return products.allIds;
       }
-    
+
       return [];
     }
     ```
 
     Измените компонент `Меню` так, чтобы он использовал функции-селекторы `getProductStatus` и `getProductIds`:
-    ```js
+    ```typescript
     import {getProductIds, getProductStatus} from '../productsSlice';
-    
+
     export const Menu = () => {
-      const productIds = useSelector(getProductIds);
-      const productsStatus = useSelector(getProductStatus);
-      
+      const productIds = useAppSelector(getProductIds);
+      const productsStatus = useAppSelector(getProductStatus);
+
       // ...
     };
     ```
 
-2. Надо сделать так, чтобы обновление галочек в фильтрах
-приводило к вызову `api.fetchProductIdsByTags`, чтобы API вернуло список продуктов в соответствие с фильтром.
-Для этого можно изменить логику callback `handleChange` в компоненте `MenuFilter` 
+2. Нужно сделать так, чтобы обновление галочек в фильтрах
+приводило к вызову метода `api.fetchProductIdsByTags`, который вернет список продуктов в соответствие с фильтром.
+Для этого можно изменить логику callback `handleChange` в компоненте `MenuFilter`
 примерно так (**не спеши копировать этот код, он нерабочий**):
-    ```js
+    ```typescript
     export const MenuFilter = () => {
       // ...
-      
+
       const handleChange = (productTag) => {
         dispatch(changeProductTag(productTag));
-    
+
         dispatch(loadByTagsRequest());
         api.fetchProductIdsByTags(tags).then(productIds => {
           dispatch(loadByTagsSuccess(productIds));
         });
       };
-    
+
       // ...
     };
     ```
     У этого кода много проблем:
       - Опять нужно создавать несколько case редьюсеров для обработки асинхронного вызова `api.fetchProductIdsByTags`
-      - Откуда взять `api`? Api создается на уровне приложения в `app/store.js`
+      - Откуда взять `api`? Api создается на уровне приложения в `app/store.ts`
       - Чтобы вызвать `fetchProductIdsByTags` нужно передать все `chosenTags`,
       а не только `productTag`, текущее значение одной из галочек.
       - Приходится модифицировать компонент, чтобы изменить поведение приложения при переключении галочки.
@@ -97,26 +94,21 @@
 Это middleware, который позволяет передавать функции, порождающие действия, вместо действий.
 Причем этим функциям доступны `getState` и `dispatch` и дополнительный аргумент.
 
-    Но сначала нужно подключить `redux-thunk` `middleware`. 
-    Функция `configureStore` умеет подключать `middleware` по умолчанию.
-    Для этого в поле `middleware` нужно передать callback функцию, которая получит функцию `getDefaultMiddleware` в 
+    Но сначала нужно подключить `redux-thunk` `middleware`.
+    Функция `configureStore` умеет подключать набор `middleware` по умолчанию. В этот набор входит `redux-thunk`.
+    В поле `middleware` нужно передать callback функцию, которая получит функцию `getDefaultMiddleware` в
     качестве аргумента и должна вернуть массив `middleware`. Также `getDefaultMiddleware` позволяет сконфигурировать
    `middleware`:
 
-    ```js
+    ```typescript
     export const store = configureStore({
-      reducer: {
-        page: pageReducer,
-        products: productsReducer,
-        chosenProducts: chosenProductsReducer
-      },
-      middleware: (getDefaultMiddleware) => {
-        return getDefaultMiddleware({
+      reducer,
+      middleware: (getDefaultMiddleware) =>
+        getDefaultMiddleware({
           thunk: {
-            extraArgument: {api}
-          }
-        }).concat(customMiddleWare, logger);
-      }
+            extraArgument: {api},
+          },
+        }).concat(customMiddleWare, logger),
     });
     ```
 
@@ -124,15 +116,25 @@
    является то, что это API позволяет автоматизировать создание действий для обработки начала, завершения и ошибки
    при асинхронных операциях.
 
-    Импортируй `createAsyncThunk` из `@reduxjs/toolkit` в `features/chosenProducts/chosenProductsSlice.js`:
+    Импортируй `createAsyncThunk` из `@reduxjs/toolkit` в `features/chosenProducts/chosenProductsSlice.ts`:
     Добавь реализацию `filterProductsByTag`:
-    ```js
-    export const filterProductsByTag = createAsyncThunk(
-      'chosenProducts/createAsyncThunk',
-      (tag, thunkAPI ) => {
-        // Напиши реализацию filterProductsByTag
+    ```typescript
+    export const filterProductsByTag = createAsyncThunk<
+      // Возвращаемый тип createAsyncThunk
+      number[],
+      // Тип для первого агрумента createAsyncThunk
+      number,
+      {
+        // Опциональные поля для определения типов полей thunkApi
+        dispatch: AppDispatch;
+        state: RootState;
+        extra: {
+          api: Api;
+        };
       }
-    );
+    >('chosenProducts/createAsyncThunk', (tag, thunkAPI) => {
+      // Напиши реализацию filterProductsByTag
+    });
     ```
     В `filterProductsByTag` доступно все необходимое, чтобы сделать запрос к API.
 
@@ -143,19 +145,42 @@
     Код неудачной версии компонента `MenuFilter` удобно взять за основу `filterProductsByTag`.
     Используй `filterProductsByTag` вместо `changeProductTag` в компоненте `MenuFilter`.
 
-5. Теперь добавь обработку действия "pending" и "fulfilled". 
+5. Начиная с RTK 1.9 можно определить предварительно типизированную версию `createAsyncThunk`, в которой можно задать типы для `state`, `dispatch` и `extra`.
+Это позволяет избавиться от необходимости задавать типы каждый раз при вызове `createAsyncThunk`
+
+    Для создания предварительно типизированной версии `createAsyncThunk`, используй `createAsyncThunk.withTypes<>()` и передай объект, содержащий
+    имена и типы полей для `state`, `dispatch` и `extra`:
+    ```typescript
+    const createAppAsyncThunk = createAsyncThunk.withTypes<{
+      dispatch: AppDispatch;
+      state: RootState;
+      extra: {
+        api: Api;
+      };
+    }>();
+    ```
+
+    Размести создание `createAppAsyncThunk` в отдельном файле `app/createAppAsyncThunk.ts` и используй `createAppAsyncThunk`
+    вместо `createAsyncThunk` в `features/chosenProducts/chosenProductsSlice.ts`:
+    ```typescript
+    export const filterProductsByTag = createAppAsyncThunk<number[], number>(
+      'chosenProducts/createAsyncThunk',
+      (tag, thunkAPI) => {
+        // Реализация filterProductsByTag
+      }
+    );
+    ```
+
+6. Теперь добавь обработку действия "pending" и "fulfilled".
    Эти создатели действий заданы в `filterProductsByTag` в качестве вложенных полей, и мы можем передать их в extraReducers:
-    ```js
+    ```typescript
     const chosenProductsSlice = createSlice({
       name: 'chosenProducts',
       initialState,
       reducers: {
-        changeProductTag(state, {payload: productTag}) {
-          const {tags} = state;
-          const index = tags.indexOf(productTag);
-    
-          index === -1 ? tags.push(productTag) : tags.splice(index, 1);
-        }
+        changeProductTag(state, {payload: productTag}: PayloadAction<number>) {
+          // Реализация changeProductTag
+        },
       },
       extraReducers(builder) {
         builder
@@ -166,7 +191,12 @@
             state.ids = productIds;
             state.status = Status.loaded;
           })
-      }
+          .addCase(filterProductsByTag.rejected, (state) => {
+            state.ids = [];
+            state.tags = [];
+            state.status = Status.none;
+          });
+      },
     });
     ```
 
