--- a/tasks/src/2.Sushi/2.9.Orders.md
+++ b/tasks/src/2.Sushi/2.9.Orders.md
@@ -1,36 +1,39 @@
 В этом задании нужно сделать добавление заказа в список заказов.
 
 1. Создайте новый слайс `ordersSlice` в `tasks/src/2.Sushi/features/orders`:
-    ```js
+    ```typescript
+    export type OrdersState = IPurchaseState[];
+
+    const initialState: OrdersState[] = [];
+
     export const ordersSlice = createSlice({
       name: 'orders',
-      initialState: [],
+      initialState,
       reducers: {
-        addPurchases(state, action) {
+        addPurchasesToOrder(state, action: PayloadAction<IPurchaseState[]>) {
           // addPurchases должен добавлять содержимое корзины, которое будет приходить через action.payload,
           // в state `orders` в виде элемента в начало массива
-        }
-      }
+        },
+      },
     });
-    
-    export const { addPurchases } = ordersSlice.actions;
-    
+
+    export const {addPurchasesToOrder} = ordersSlice.actions;
     export const ordersReducer = ordersSlice.reducer;
     ```
-
     Подключи `ordersReducer` через `configureStore`.
 
 2. Добавь в слайс `purchasesSlice` редьюсер, который будет чистить содержимое корзины.
 
 3. Сделай так, чтобы обработчик `onOrder` в компоненте `Cart` был привязан к thunk `order`.
 
-4. Допиши компонент `Order`, чтобы получать необходимые компоненту данные из `state`. 
-Не забудь почистить ненужные `propTypes`.
+4. Допиши компонент `Order`, чтобы получать необходимые компоненту данные из `state`.
+   Не забудь почистить ненужные `propTypes`.
 
 5. Для правильной работы добавления заказа нужно произвести несколько действий:
-    - перенести содержимое корзины в `orders` в виде элемента в начало массива
-    - очистить корзину
-    - открыть страницу заказов
+
+    * перенести содержимое корзины в `orders` в виде элемента в начало массива
+    * очистить корзину
+    * открыть страницу заказов
 
     Все это должно происходить только если в корзине что-то было.
     Но чтобы это сделать нужно задействовать сразу несколько слайсов.
@@ -38,15 +41,12 @@
     Поэтому нам необходимо передавать данные между slice-редьюсерами.
     Для решения этой проблемы в задании будем использовать redux-thunk middleware.
 
-    Добавьте thunk `order` в `tasks/src/2.Sushi/features/orders/ordersSlice.js`:
-     ```js
-     export const order = createAsyncThunk(
-       'orders/order',
-       (_, thunkAPI) => {
-         ...
-       }
-     );
-     ```
+    Добавьте thunk `order` в `tasks/src/2.Sushi/features/orders/ordersSlice.ts`:
+    ```typescript
+    export const order = createAppAsyncThunk<void, undefined>('orders/order', (_, thunkAPI) => {
+        // Напиши реализацию
+    });
+    ```
 
     В thunk `order` мы имеем доступ по всему состояние через `thunkAPI.getState()`,
     а также можем вызывать другие действия через `thunkAPI.dispatch(...)`.
